--- a/css/default.css
+++ b/css/default.css
@@ -1030,7 +1030,7 @@ section.contacts {
   /* line 245, D:/Projects/home/ptt/www/css/default.scss */
   section.contacts .left {
     background-color: #f7f7f7;
-    padding: 108px 0 160px;
+    padding: 108px 0 30px !important;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -1058,7 +1058,7 @@ section.contacts {
     /* line 251, D:/Projects/home/ptt/www/css/default.scss */
     section.contacts .left .phone {
       margin-top: 40px;
-      padding-bottom: 30px; }
+      padding-bottom: 40px; }
       /* line 252, D:/Projects/home/ptt/www/css/default.scss */
       section.contacts .left .phone p.phone {
         color: #3C2054;
@@ -1939,6 +1939,30 @@ section.services .delivery .videocontainer {
 
 @media (max-width: 1000px) {
   /* line 77, D:/Projects/home/ptt/www/css/adaptive.scss */
+  section.contacts .left .address {
+    border-bottom: 1px solid #e4e1e6;
+  }
+  section.contacts .left .phone {
+    border-bottom: 1px solid #e4e1e6;
+  }
+  section.contacts .left .phone .phone {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+  section.contacts .left {
+    padding-top: 30px !important;
+  }
+  section.contacts .right .small {
+    display: none;
+  }
+  section.contacts .left .logo {
+    display: none;
+  }
+  section.contacts .left .more .line a {
+    display: block;
+    margin-left: 0;
+    padding-bottom: 18px;
+  }
   .adaptiveshowmap {
     display: block; }
   /* line 78, D:/Projects/home/ptt/www/css/adaptive.scss */
@@ -2209,12 +2233,12 @@ section.services .delivery .videocontainer {
     height: 200px; }
   /* line 180, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left {
-    padding-top: 38px;
+    padding-top: 118px;
     padding-bottom: 46px;
     margin-bottom: 0; }
   /* line 181, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left .address {
-    margin-top: 43px; }
+    margin-top: 30px; }
   /* line 182, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left .address p.big {
     font-size: 18px;
@@ -2222,10 +2246,13 @@ section.services .delivery .videocontainer {
     margin-top: 23px; }
   /* line 183, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left .address {
-    padding-bottom: 41px; }
+    padding-bottom: 40px; }
   /* line 184, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left .phone {
-    margin-top: 44px; }
+    margin-top: 30px; }
+  section.contacts .left .more {
+    margin-top: 30px;
+  }
   /* line 185, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left .phone p.phone {
     font-size: 23px;
@@ -2233,7 +2260,7 @@ section.services .delivery .videocontainer {
     line-height: 1em; }
   /* line 186, D:/Projects/home/ptt/www/css/adaptive.scss */
   section.contacts .left .phone p.big {
-    margin-top: 31px; }
+    margin-top: 23px; }
   /* line 189, D:/Projects/home/ptt/www/css/adaptive.scss */
   #popup .container {
     width: 83%; }
