--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -18,3 +18,24 @@
     font-weight: 500;
     src: url('PFDinTextUniversal-Medium.otf') format('opentype');
 }
+
+@font-face {
+    font-family: 'PFDinTextLight';
+    font-style: normal;
+    font-weight: 300;
+    src: url('PFDinTextUniversal-Light.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'PFDinTextRegular';
+    font-style: normal;
+    font-weight: 400;
+    src: url('PFDinTextUniversal-Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'PFDinTextMedium';
+    font-style: normal;
+    font-weight: 500;
+    src: url('PFDinTextUniversal-Medium.otf') format('opentype');
+}
